<?xml version="1.0"?>
<package>
  <name>rosban_random</name>
  <version>0.0.0</version>
  <description>A package containing tools to generate random objects</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>

  <author email="medrimonia@gmail.com">medrimonia</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>NotChosenYet</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>Eigen</build_depend> <!-- rhobandeps/eigen -->

  <run_depend>Eigen</run_depend>

</package>
